# pico-weather-station

./: .gitignore  .gitmodules  README.md
Firmware/: CMakeLists.txt  Fonts.cpp  Fonts.h  Graphics.cpp  IRunnable.h  ITask.h  IoDevice.h  Runnable.h  Settings.cpp  Settings.h  main.cpp
Firmware/Drivers/: RTC_MCP7940N.c  RTC_MCP7940N.h  nrf24.c  u8x8_d_st7586s_erc240160_chunked.c
Firmware/Hardware/: EnvironmentSensor.cpp  EnvironmentSensor.h  I2cDevice.cpp  I2cDevice.h  Keypad.cpp  Keypad.h  RadioReceiver.cpp  RadioReceiver.h  RealTimeClock.cpp  RealTimeClock.h  UartRx.pio
Firmware/Network/: NetworkController.cpp  NetworkController.h  Socket.cpp  Socket.h  TcpSocket.cpp  TcpSocket.h  WiFiController.cpp  WiFiController.h  lwipopts.h
Firmware/Screens/: WeatherStation.cpp
Firmware/Utils/: CallOnce.h
Firmware/Widgets/: Display.cpp  Font.cpp  Font.h  Label.cpp  Painter.cpp  Painter.h  Point.cpp  Point.h  ProgressBar.cpp  Rect.cpp  Rect.h  Size.cpp  Size.h  Utils.h  Widget.cpp  Widget.h
FrontEnd/: .gitignore  CMakeLists.txt  platformio.ini
FrontEnd/src/: Fonts.cpp  Fonts.h  Graphics.cpp  Graphics.h  Icons.cpp  Icons.h  ProgressBar.cpp  Rect.h  main  main.cpp  nrf24.cpp  nrf24.h  u8x8_d_st7586s_erc240160_chunked.c
FrontEnd/src/Drivers/: EERAM_47xxx.c  EERAM_47xxx.h  RTC_MCP7940N.c  RTC_MCP7940N.h
FrontEnd/src/Hardware/: I2cDevice.cpp  I2cDevice.h  RealTimeClock.h
FrontEnd/src/Network/: NetworkEngineInterface.cpp  NetworkEngineInterface.h  NetworkEngineToFrontEnd.fbs  NetworkEngineToFrontEnd_generated.h
FrontEnd/src/Screens/: MainScreen.cpp  MainScreen.h  WeatherStation.cpp  WeatherStation.h
FrontEnd/src/Widgets/: Display.cpp  Display.h  Font.cpp  Font.h  Image.cpp  Image.h  Label.cpp  Label.h  Painter.cpp  Painter.h  Point.cpp  Point.h  ProgressBar.cpp  ProgressBar.h  Rect.cpp  Rect.h  Size.cpp  Size.h  Utils.h  Widget.cpp  Widget.h
Graphics/Icons/xbm/: cloud-with-raindrops.xbm  cloud-with-snowflakes.xbm  cloud-with-thunderbolt.xbm  cloud.xbm  clouds-with-ice-cubes.xbm  clouds-with-raindrops-and-ice-cubes.xbm  clouds-with-raindrops-and-snowflakes.xbm  clouds-with-raindrops.xbm  clouds-with-sleet.xbm  clouds-with-snowflakes.xbm  fire.xbm  fog.xbm  moon-with-cloud-and-raindrops.xbm  moon-with-cloud-and-snowflakes.xbm  moon-with-cloud-and-thunderbolt.xbm  moon-with-cloud.xbm  moon-with-clouds-and-raindrops.xbm  moon-with-clouds-and-snowflakes.xbm  moon-with-clouds-and-thunderbolt.xbm  moon-with-clouds.xbm  moon-with-more-clouds.xbm  moon.xbm  question-mark.xbm  snowflake.xbm  sun-hot.xbm  sun-with-cloud-and-raindrops.xbm  sun-with-cloud-and-snowflakes.xbm  sun-with-cloud-and-thunderbolt.xbm  sun-with-cloud.xbm  sun-with-clouds-and-raindrops.xbm  sun-with-clouds-and-snowflakes.xbm  sun-with-clouds-and-thunderbolt.xbm  sun-with-clouds.xbm  sun-with-more-clouds.xbm  sun.xbm  whirlpools.xbm
Hardware/PCB/PicoWeatherStation/: #auto_saved_files#  433MhzRX.iges  433MhzRx.SLDPRT  Peripherals.kicad_sch  PicoWeatherStation.kicad_pcb  PicoWeatherStation.kicad_pro  PicoWeatherStation.kicad_sch  PicoWeatherStation.kicad_sym  PicoWeatherStation.round-tracks-config  PushButton.STEP  ZR-3A.FCStd  ZR-3A.FCStd1  ZR-3A.step  fp-lib-table  sym-lib-table
Hardware/PCB/PicoWeatherStation/MCU_RaspberryPi_and_Boards.pretty/: RPi_Pico_SMD.kicad_mod
Hardware/PCB/PicoWeatherStation/PicoWeatherStation.pretty/: Backlight_Connector_SMD_P2.00mm.kicad_mod  Battery_Holder_CR1632.kicad_mod  ERC240160.kicad_mod  GY-BME280.kicad_mod  RPi_PicoW_SMD.kicad_mod  ZR-3A.kicad_mod  nRF24L01+.kicad_mod
Research/: MainScreen.psd  WeatherStationBlockDiagram.drawio
Research/Documents/: ERC240160-2_4SPI_DemoCode.txt  ERC240160-2_8bit_DemoCode.txt
Research/Fonts/: BitCell-Regular-16.bdf  BitCell-Regular-16.c
Research/PCB/: ERC240160-CapTouch-RpiPico-ESP12.kicad_pcb  ERC240160-CapTouch-RpiPico-ESP12.kicad_pro  ERC240160-CapTouch-RpiPico-ESP12.kicad_sch  ERC240160.kicad_sym  c-2-1734592-5-c-3d.stp  fp-lib-table  sym-lib-table
Research/PCB/ERC240160.pretty/: ERC240160.kicad_mod
Research/PCB/MCU_RaspberryPi_and_Boards.pretty/: RPi_Pico_SMD.kicad_mod
Research/pico-rtc-eeram/: CMakeLists.txt  EERAM_47xxx.h  I2cDevice.cpp  main.cpp
Research/simple-http-parser/: CMakeLists.txt  main.cpp
